IFS-2634: Changed all email signatures and contact to to Innovate UK and removed all Competitions team signature from all templates

--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/1177-assessor-skills.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/1177-assessor-skills.html
@@ -160,7 +160,7 @@
 			</div>
 		</fieldset> -->
 		<h2 class="heading-medium">Innovation areas</h2>
-		<p>These innovation areas have been chosen as your current areas of expertise. They will influence the types of competition you will be invited to assess. If you would like to amend them or add new ones please contact a member of the Competitions team <a href="#">support@innovateuk.gov.uk</a></p>
+		<p>These innovation areas have been chosen as your current areas of expertise. They will influence the types of competition you will be invited to assess. If you would like to amend them or add new ones please contact Innovate UK <a href="#">support@innovateuk.gov.uk</a></p>
 		<ul class="list list-bullet">
 			<li>
 				health and life sciences
