--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/3211-email-docs-rejected.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/3211-email-docs-rejected.html
@@ -91,12 +91,11 @@
 
 						<p style="margin: 0 0 1em 0;">You now need to take action to make sure your documents meet our requirements. When you have finished please resubmit through your <a href="/prototypes/1588-project-status?stage=level2&#38;status=docs-reject">Innovate UK dashboard</a>.</p>
 
-						<p style="margin: 0 0 1em 0;">If you have any other questions please contact the competitions team using the details below. </p>
+						<p style="margin: 0 0 1em 0;">If you have any other questions please contact Innovate UK using the details below. </p>
 
 						<p style="margin: 0 0 1em 0;">Yours sincerely</p>
 
                         <p style="margin: 0 0 1em 0;">
-                            Competitions Team<br />
                             Innovate UK<br />
                             Tel: 0300 321 4357<br />
 							Email: competitions@innovateuk.gov.uk
