--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/4083-upcoming-comp.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/4083-upcoming-comp.html
@@ -37,7 +37,7 @@
 
         <p><a href="#" rel="external">See competition brief</a></p>
 
-        <p>If you have any queries, please contact the competitions team <a href="mailto:competitions@innovateuk.gov.uk">competitions@innovateuk.gov.uk</a></p>
+        <p>If you have any queries, please contact Innovate UK <a href="mailto:competitions@innovateuk.gov.uk">competitions@innovateuk.gov.uk</a></p>
 
     </section>
 
