--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/4761-email-profile-available.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/4761-email-profile-available.html
@@ -90,13 +90,12 @@
 
 						<p style="margin: 0 0 1em 0;">As the designated finance contact for your organisation, you will be responsible for completing your spend profile.</p>
 
-						<p style="margin: 0 0 1em 0;">If you have any other questions around these documents please contact the competitions team using the details below.</p>
+						<p style="margin: 0 0 1em 0;">If you have any other questions around these documents please contact Innovate UK using the details below.</p>
 
 
 						<p style="margin: 0 0 1em 0;">Yours sincerely,</p>
 
                         <p style="margin: 0 0 1em 0;">
-                            Competitions Team <br />
                             Innovate UK <br />
                             Tel: 0300 321 4357 <br />
 							Email: competitions@innovateuk.gov.uk
