--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/1178-assessor-profile-skills.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/1178-assessor-profile-skills.html
@@ -20,7 +20,7 @@
 
 	<h1 class="heading-large">Your skills</h1>
 
-	<p>These innovation area(s) have been chosen as your current areas of expertise. They will influence the types of competition you will be invited to assess. If you would like to amend them or add new ones please contact a member of the Competitions team <a href="#">support@innovateuk.gov.uk</a>.</p>
+	<p>These innovation area(s) have been chosen as your current areas of expertise. They will influence the types of competition you will be invited to assess. If you would like to amend them or add new ones please contact Innovate UK <a href="#">support@innovateuk.gov.uk</a>.</p>
 
 	<!--<h2 class="heading-medium no-margin-bottom">Innovation areas &nbsp; <small><a href="/prototypes/1177-assessor-skills?edit"> Edit your recorded skills</a></small></h2>-->
 	<h2 class="heading-medium no-margin-bottom">Innovation areas</h2>
