--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/1594-gol-available-email.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/1594-gol-available-email.html
@@ -88,12 +88,11 @@
 
 						<p style="margin: 0 0 1em 0;">We are pleased to inform you that your grant offer letter is now ready for you to sign. This will complete the project setup stage. Please sign into your online <a href="/prototypes/1594-gol-partner-view">Innovate UK dashboard</a> to view the letter. Your project cannot start until this document is signed and accepted by Innovate UK.</p>
 
-						<p style="margin: 0 0 1em 0;">If you have any other questions around these documents please contact the competitions team using the details below.</p>
+						<p style="margin: 0 0 1em 0;">If you have any other questions around these documents please contact Innovate UK using the details below.</p>
 
 						<p style="margin: 0 0 1em 0;">Yours sincerely,</p>
 
                         <p style="margin: 0 0 1em 0;">
-                            Competitions Team <br />
                             Innovate UK <br />
                             Tel: 0300 321 4357 <br />
 							Email: competitions@innovateuk.gov.uk
