--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/3988-finance-response-email.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/3988-finance-response-email.html
@@ -90,12 +90,11 @@
 
 						<p style="margin: 0 0 1em 0;">You can view and respond in the <a href="/prototypes/1588-project-status?stage=level2">project setup</a> stage for this application. Please navigate to the finance checks section.</p>
 
-						<p style="margin: 0 0 1em 0;">If you have any other questions please contact the competitions team using the details below.</p>
+						<p style="margin: 0 0 1em 0;">If you have any other questions please contact Innovate UK using the details below.</p>
 
 						<p style="margin: 0 0 1em 0;">Yours sincerely,</p>
 
                         <p style="margin: 0 0 1em 0;">
-                            Competitions Team <br />
                             Innovate UK <br />
                             Tel: 0300 321 4357 <br />
 							Email: competitions@innovateuk.gov.uk
