--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/4423-profile-rejected-email.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/4423-profile-rejected-email.html
@@ -90,12 +90,11 @@
 
 						<p style="margin: 0 0 1em 0;">Once you are satisfied that the  signed grant offer letter meets Innovate UK's requirements, please resubmit through your <a href="/prototypes/1588-project-status?stage=level2">Innovate UK dashboard</a></p>
 
-						<p style="margin: 0 0 1em 0;">If you have any questions or were not expecting this email please contact the competitions team using the details below.</p>
+						<p style="margin: 0 0 1em 0;">If you have any questions or were not expecting this email please contact Innovate UK using the details below.</p>
 
 						<p style="margin: 0 0 1em 0;">Yours sincerely,</p>
 
                         <p style="margin: 0 0 1em 0;">
-                            Competitions Team <br />
                             Innovate UK <br />
                             Tel: 0300 321 4357 <br />
 							Email: competitions@innovateuk.gov.uk
