--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2189-assessor-skills.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2189-assessor-skills.html
@@ -27,7 +27,7 @@
         <h2 class="heading-medium no-margin-bottom">Innovation areas</h2>
         <p class="form-hint">These innovation areas have been chosen as your current areas of expertise. They will influence the types
             of competition you will be invited to assess. If you would like to amend them or add new ones please
-            contact a member of the Competitions team <a href="mailto:support@innovateuk.gov.uk">support@innovateuk.gov.uk</a>.
+            contact Innovate UK <a href="mailto:support@innovateuk.gov.uk">support@innovateuk.gov.uk</a>.
         </p>
         <ul class="list list-bullet">
             <li>Urban living</li>
