--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/profile/skills-edit.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/profile/skills-edit.html
@@ -22,7 +22,7 @@
 
             <p class="form-hint">These innovation areas have been chosen as your current areas of expertise. They will influence the types
                 of competition you will be invited to assess. If you would like to amend them or add new ones please
-                contact a member of the Competitions team <a href="mailto:support@innovateuk.gov.uk">support@innovateuk.gov.uk</a>.
+                contact Innovate UK <a href="mailto:support@innovateuk.gov.uk">support@innovateuk.gov.uk</a>.
             </p>
 
             <ul class="list list-bullet" th:unless="${#maps.isEmpty(model.innovationAreas)}">
