--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/addresses.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/addresses.html
@@ -1,4 +1,5 @@
-
+<!DOCTYPE html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <th:block th:fragment="company-address-details">
     <div id="manual-company-input">
         <fieldset>
@@ -12,7 +13,7 @@
                           <span class="error-message"  th:each="err : ${#fields.errors('addressForm.postcodeInput')}" th:text="${err}" />
                     </th:block>
                 </label>
-                <input class="form-control" th:field="*{addressForm.postcodeInput}" th:classappend="${#fields.hasErrors('*{addressForm.postcodeInput}') and form.addressForm.triedToSearch} ? 'form-control-error'" type="text" />
+                <input id="addressForm.postcodeInput" class="form-control" th:field="*{addressForm.postcodeInput}" th:classappend="${#fields.hasErrors('*{addressForm.postcodeInput}') and form.addressForm.triedToSearch} ? 'form-control-error'" type="text" />
                 <button type="submit" id="postcode-lookup" class="button" name="search-address">Find UK address</button>
                 <div th:if='${form.addressForm.postcodeInput != ""} and ${#lists.isEmpty(form.addressForm.postcodeOptions)}'>No results were found</div>
             </div>
@@ -24,8 +25,10 @@
                           <span class="error-message"  th:each="err : ${#fields.errors('addressForm.postcodeOptions')}" th:text="${err}" />
                     </th:block>
                 </label>
-                <select class="form-control" th:field="*{addressForm.selectedPostcodeIndex}">
-                    <option th:value="${status.index}" th:each="address,status : ${form.addressForm.postcodeOptions}" th:text="${address.combinedString}"></option>
+                <select id="addressForm.selectedPostcodeIndex" class="form-control" th:field="*{addressForm.selectedPostcodeIndex}">
+                    <option th:value="${status.index}"
+                            th:each="address,status : ${form.addressForm.postcodeOptions}"
+                            th:text="${address.combinedString}"></option>
                 </select>
                 <button type="submit" class="button" name="select-address">Use selected address</button>
             </div>
@@ -39,37 +42,57 @@
                 <label class="form-label" for="addressForm.selectedPostcode.addressLine1">
                     <span class="form-label-bold">Street</span>
                     <th:block th:if="${#fields.hasErrors('*{addressForm.selectedPostcode.addressLine1}') and form.addressForm.triedToSave}">
-                          <span class="error-message"  th:each="err : ${#fields.errors('addressForm.selectedPostcode.addressLine1')}" th:text="${err}" />
+                          <span class="error-message" th:each="err : ${#fields.errors('addressForm.selectedPostcode.addressLine1')}" th:text="${err}" />
                     </th:block>
                 </label>
-                <input class="form-control" th:field="*{addressForm.selectedPostcode.addressLine1}" th:classappend="${#fields.hasErrors('*{addressForm.selectedPostcode.addressLine1}') and form.addressForm.triedToSave} ? 'form-control-error'" type="text" />
+                <input id="addressForm.selectedPostcode.addressLine1"
+                       class="form-control"
+                       th:field="*{addressForm.selectedPostcode.addressLine1}"
+                       th:errorclass="form-control-error"
+                       th:attr="data-required-errormessage=#{validation.standard.addressline1.required}"
+                       type="text"
+                       required="required" />
             </div>
             <div class="form-group" th:classappend="${#fields.hasErrors('*{addressForm.selectedPostcode.addressLine2}') and form.addressForm.triedToSave} ? 'form-group-error'">
                 <label class="form-label visuallyhidden" for="addressForm.selectedPostcode.addressLine2">
                     <span class="form-label-bold">Street line 2</span>
                     <th:block th:if="${#fields.hasErrors('*{addressForm.selectedPostcode.addressLine2}') and form.addressForm.triedToSave}">
-                          <span class="error-message"  th:each="err : ${#fields.errors('addressForm.selectedPostcode.addressLine2')}" th:text="${err}" />
+                          <span class="error-message" th:each="err : ${#fields.errors('addressForm.selectedPostcode.addressLine2')}" th:text="${err}" />
                     </th:block>
                 </label>
-                <input class="form-control" th:field="*{addressForm.selectedPostcode.addressLine2}" th:classappend="${#fields.hasErrors('*{addressForm.selectedPostcode.addressLine2}') and form.addressForm.triedToSave} ? 'form-control-error'"   type="text" />
+                <input id="addressForm.selectedPostcode.addressLine2"
+                       class="form-control"
+                       th:field="*{addressForm.selectedPostcode.addressLine2}"
+                       th:classappend="${#fields.hasErrors('*{addressForm.selectedPostcode.addressLine2}') and form.addressForm.triedToSave} ? 'form-control-error'"
+                       type="text" />
             </div>
             <div class="form-group" th:classappend="${#fields.hasErrors('*{addressForm.selectedPostcode.addressLine3}') and form.addressForm.triedToSave} ? 'form-group-error'">
                 <label class="form-label" for="addressForm.selectedPostcode.addressLine3">
                     <span class="form-label-bold visuallyhidden">Street line 3</span>
                     <th:block th:if="${#fields.hasErrors('*{addressForm.selectedPostcode.addressLine3}') and form.addressForm.triedToSave}">
-                          <span class="error-message"  th:each="err : ${#fields.errors('addressForm.selectedPostcode.addressLine3')}" th:text="${err}" />
+                          <span class="error-message" th:each="err : ${#fields.errors('addressForm.selectedPostcode.addressLine3')}" th:text="${err}" />
                     </th:block>
                 </label>
-                <input class="form-control" th:field="*{addressForm.selectedPostcode.addressLine3}"  th:classappend="${#fields.hasErrors('*{addressForm.selectedPostcode.addressLine3}') and form.addressForm.triedToSave} ? 'form-control-error'" type="text" />
+                <input id="addressForm.selectedPostcode.addressLine3"
+                       class="form-control"
+                       th:field="*{addressForm.selectedPostcode.addressLine3}"
+                       th:classappend="${#fields.hasErrors('*{addressForm.selectedPostcode.addressLine3}') and form.addressForm.triedToSave} ? 'form-control-error'"
+                       type="text" />
             </div>
             <div class="form-group" th:classappend="${#fields.hasErrors('*{addressForm.selectedPostcode.town}') and form.addressForm.triedToSave} ? 'form-group-error'">
                 <label class="form-label" for="addressForm.selectedPostcode.town">
                     <span class="form-label-bold">Town</span>
                     <th:block th:if="${#fields.hasErrors('*{addressForm.selectedPostcode.town}') and form.addressForm.triedToSave}">
-                          <span class="error-message"  th:each="err : ${#fields.errors('addressForm.selectedPostcode.town')}" th:text="${err}" />
+                          <span class="error-message" th:each="err : ${#fields.errors('addressForm.selectedPostcode.town')}" th:text="${err}" />
                     </th:block>
                 </label>
-                <input class="form-control" th:field="*{addressForm.selectedPostcode.town}"  th:classappend="${#fields.hasErrors('*{addressForm.selectedPostcode.town}') and form.addressForm.triedToSave} ? 'form-control-error'" type="text" />
+                <input id="addressForm.selectedPostcode.town"
+                       class="form-control"
+                       th:field="*{addressForm.selectedPostcode.town}"
+                       th:errorclass="form-control-error"
+                       th:attr="data-required-errormessage=#{validation.standard.town.required}"
+                       type="text"
+                       required="required" />
             </div>
             <div class="form-group" th:classappend="${#fields.hasErrors('*{addressForm.selectedPostcode.county}') and form.addressForm.triedToSave} ? 'form-group-error'">
                 <label class="form-label" for="addressForm.selectedPostcode.county">
@@ -78,16 +101,26 @@
                           <span class="error-message"  th:each="err : ${#fields.errors('addressForm.selectedPostcode.county')}" th:text="${err}" />
                     </th:block>
                 </label>
-                <input class="form-control" th:field="*{addressForm.selectedPostcode.county}" th:classappend="${#fields.hasErrors('*{addressForm.selectedPostcode.county}') and form.addressForm.triedToSave} ? 'form-control-error'"  type="text" />
+                <input id="addressForm.selectedPostcode.county"
+                       class="form-control"
+                       th:field="*{addressForm.selectedPostcode.county}"
+                       th:classappend="${#fields.hasErrors('*{addressForm.selectedPostcode.county}') and form.addressForm.triedToSave} ? 'form-control-error'"
+                       type="text" />
             </div>
             <div class="form-group" th:classappend="${#fields.hasErrors('*{addressForm.selectedPostcode.postcode}') and form.addressForm.triedToSave} ? 'form-group-error'">
                 <label class="form-label" for="addressForm.selectedPostcode.postcode" >
                     <span class="form-label-bold">Postcode</span>
                     <th:block th:if="${#fields.hasErrors('*{addressForm.selectedPostcode.postcode}') and form.addressForm.triedToSave}">
-                          <span class="error-message"  th:each="err : ${#fields.errors('addressForm.selectedPostcode.postcode')}" th:text="${err}" />
+                          <span class="error-message" th:each="err : ${#fields.errors('addressForm.selectedPostcode.postcode')}" th:text="${err}" />
                     </th:block>
                 </label>
-                <input class="form-control" th:field="*{addressForm.selectedPostcode.postcode}" th:classappend="${#fields.hasErrors('*{addressForm.selectedPostcode.postcode}') and form.addressForm.triedToSave} ? 'form-control-error'" type="text" />
+                <input id="addressForm.selectedPostcode.postcode"
+                       class="form-control"
+                       th:field="*{addressForm.selectedPostcode.postcode}"
+                       th:errorclass="form-control-error"
+                       th:attr="data-required-errormessage=#{validation.standard.postcode.required}"
+                       type="text"
+                       required="required" />
             </div>
         </fieldset>
     </div>
@@ -179,3 +212,5 @@
         <input class="form-control" id="org-name" th:field="*{organisationName}" type="text" value="" />
     </div>
 </th:block>
+
+</html>
