--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
@@ -52,7 +52,7 @@
                 <fieldset>
                     <legend id="organisationSize">
                         <span class="form-label form-label-bold" th:text="${formInput.description}"></span>
-                        <th:block th:insert="question-type/form-elements :: form-hint (hint=${formInput.guidanceTitle})" />
+                        <th:block th:insert="question-type/form-elements :: form-hint (hint=${question.description})" />
                         <th:block th:if="${#fields.hasErrors('organisationSize')}">
                             <span class="error-message" th:each="err : ${#fields.errors('organisationSize')}" th:text="${err}"></span>
                         </th:block>
