IFS-2246 Content update

--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-view-invite.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-view-invite.html
@@ -59,7 +59,7 @@ You can review your assessor feedback and must respond to this before the interv
 Please visit our online Innovation Funding Service to respond to this request: [invite URL]
     </p>
 
-    <h3 class="heading-small">Message</h3>
+    <h3 class="heading-small">Additional text</h3>
 
     <p>Any additional text that has been added can be placed here.</p>
 
