--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/application.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/application.html
@@ -91,7 +91,7 @@
               <div th:replace="finance/finance-summary :: application_finances_summary (isApplicant=${isApplicant})"></div>
               <div th:replace="finance/finance-summary :: research_participation_alert" th:if="${(currentApplication.isOpen() and isApplicant)}"></div>
 
-              <h2 class="heading-medium">Funding breakdown</h2>
+              <h2 class="heading-small">Funding breakdown</h2>
               <th:block th:insert="finance/finance-summary :: financial_summary_table" />
 
           </div>
