IFS-2251 Content updates to email

--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-review-send.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-review-send.html
@@ -113,65 +113,67 @@
 
             <div class="form-group">
               <h3 class="heading-small no-margin">Message</h3>
-              <p class="form-hint" style="white-space: pre-wrap">Competition: &lt;competition title&gt;
-Application number: &lt;application number&gt;
-Project title: &lt;project title&gt;
+              <p class="form-hint" style="white-space: pre-wrap">Competition: [competition title]
+Application number: [application number]
+Project title: [project title]
               </p>
             </div>
 
             <div class="form-group">
                 <label class="form-label-bold" for="message">Additional text</label>
-                <p>Make sure you replace each &lt; and &gt; and all the words in between.</p>
-                <textarea id="message" rows="60" class="width-full">
+                <p>Make sure you replace each [ and ] and all the words in between.</p>
+                <div class="textarea-wrapped">
+                    <textarea id="message" rows="60" data-editor="md" class="width-full">
 Thank you for applying for this competition. The review of your proposal by independent assessors is now complete and we are pleased to invite you to the next stage of the competition: an interview to present your project.
 
-Your interview will be held on &lt;date&gt; at &lt;time&gt;. We are unable to change the time of your appointment. Please arrive 20 minutes early in case the interview panel is running ahead of schedule.
+Your interview will be held on [date]; at [time]. We are unable to change the time of your appointment. Please arrive 20 minutes early in case the interview panel is running ahead of schedule.
 
-&lt;or delete above line and add the line below&gt;
+[or delete above line and add the line below]
 
-Your interview will be held between &lt;date&gt; and &lt;date&gt;. We will email you by &lt;date&gt; to confirm the exact date and time. We are unable to change the time of your appointment once you have been informed of it.
+Your interview will be held between [date] and [date]. We will email you by [date] to confirm the exact date and time. We are unable to change the time of your appointment once you have been informed of it.
 
-&lt;Respond to assessment feedback&gt;
-&lt;Review assessment feedback&gt;
+[Respond to assessment feedback]
+[Review assessment feedback]
 
 The assessors' comments and scores are available for you to read by signing into the Innovation Funding Service (IFS). This feedback is intended to be constructive, highlighting the strengths and weaknesses of your application. Different assessors may give conflicting opinions, which reflects their varying interpretations of your proposal.
 
-&lt;Delete if not applicable:&gt;
+[Delete if not applicable:]
 
-You can respond to this feedback in writing if you wish. Your response will be reviewed by the assessor panel before your interview. Upload your response by following the instructions on IFS before midday on &lt;date&gt;. Your document:
+You can respond to this feedback in writing if you wish. Your response will be reviewed by the assessor panel before your interview. Upload your response by following the instructions on IFS before midday on [date]. Your document:
 
 -	must be a single PDF
--	must be no more than &lt;3 / 10&gt; pages long
+-	must be no more than [3 / 10] pages long
 -	can contain charts and diagrams
 -	will not be reviewed if it is late or too long
 
-*Submit your presentation*
+**Submit your presentation**
 
-Send the slides for your presentation to competitionenquiries@innovateuk.gov.uk by midday on &lt;date&gt;. You will not be able to make any edits after this date.
+Send the slides for your presentation to competitionenquiries@innovateuk.gov.uk by midday on [date]. You will not be able to make any edits after this date.
 
 Your presentation must:
 
 -	be in Microsoft PowerPoint
--	be no more than &lt;10 / 20&gt; minutes long
--	contain no more than &lt;10 / 20&gt; slides
+-	be no more than [10 / 20] minutes long
+-	contain no more than [10 / 20] slides
 -	not include videos or external links
 
-*Tell us who will be attending*
+**Tell us who will be attending**
 
-Up to &lt;3 / 9&gt; members of your project team can attend the interview. Please email their names to competitionenquiries@innovateuk.gov.uk by midday on &lt;date&gt;. We recommend that each organisation in your consortium is represented, if possible.
+Up to [3 / 9] members of your project team can attend the interview. Please email their names to competitionenquiries@innovateuk.gov.uk by midday on [date]. We recommend that each organisation in your consortium is represented, if possible.
 
-*Interview format*
+**Interview format**
 
-The timings will be strictly enforced, so practice your presentation in advance and use your time wisely. You will not need to introduce your proposal as the interview panel will already be familiar with it &lt;and your response to the assessors' feedback&gt;.
+The timings will be strictly enforced, so practice your presentation in advance and use your time wisely. You will not need to introduce your proposal as the interview panel will already be familiar with it [and your response to the assessors' feedback].
 
-Once you have presented your slides the panel will ask you questions for up to &lt;20 / 30&gt; minutes.
+Once you have presented your slides the panel will ask you questions for up to [20 / 30] minutes.
 
-&lt;After a closed discussion, you may be asked to answer some additional questions for up to &lt;15&gt; minutes&gt;
+[After a closed discussion, you may be asked to answer some additional questions for up to [15] minutes]
 
 Congratulations on reaching this stage. Please contact Customer Support Services on 0300 321 4357 if you have any questions.
 
 
-              </textarea>
+                    </textarea>
+                </div>
             </div>
 
             <p class="form-hint">
@@ -179,7 +181,6 @@ Congratulations on reaching this stage. Please contact Customer Support Services
             </p>
 
             <p class="form-hint extra-margin">
-              Competitions Team <br>
               Innovate UK <br>
               Tel: 0300 321 4357 <br>
               Email: competitions@innovateuk.gov.uk
