--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2247-review-send.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2247-review-send.html
@@ -27,42 +27,49 @@
 
 	<div class="form-group">
 		<label class="form-label-bold" for="subject">Email subject</label>
-    	<input class="form-control width-full" id="subject" type="text" value="Invitation to Innovate UK interview panel for <competition>" />
+    	<input class="form-control width-full" id="subject" type="text" value="Invitation to Innovate UK interview panel for [competition]" />
 	</div>
 
     <div class="form-group">
         <h3 class="heading-small no-margin">Message</h3>
-        <p class="form-hint" style="white-space: pre-wrap">Dear &lt;Firstname Lastname&gt;</p>
+        <p class="form-hint" style="white-space: pre-wrap">Dear [Firstname Lastname]</p>
     </div>
 
 	<div class="form-group">
 		<label class="form-label-bold" for="message">Additional text</label>
-        <p>Make sure you replace all the < and > and the words in between.</p>
-    	<textarea id="message" rows="30" class="width-full">
-You are invited to attend the next stage in the assessment process for this competition, which is the interview panel. To respond, visit the online competition page &lt;insert link into the words “competition’s page” and delete this guidance&gt;.
+        <p>Make sure you replace all the [ and ] and the words in between.</p>
+        <div class="textarea-wrapped">
+    	    <textarea id="message" rows="30" data-editor="md" class="width-full">
+You are invited to attend the next stage in the assessment process for this competition, which is the interview panel. To respond, visit the online competition page [insert link into the words “competition’s page” and delete this guidance].
 
-If you confirm you are available, the applications will appear in your Innovation Funding Service account for you to review during the pre-reading period.
+If you confirm you are available, the applications will appear in your [Innovation Funding Service account](https://auth.apply-for-innovation-funding.service.gov.uk/idp/profile/SAML2/Redirect/SSO?execution=e2s1) for you to review during the pre-reading period.
 
-*When*
-Pre-reading period to review applications: &lt;date month year&gt; to &lt;date month year&gt;
-Applicants’ response-to-feedback documents and presentations available by: &lt;date month year&gt;
-Interview panel date&lt;s&gt;: &lt;date month year&gt; to &lt;date month year&gt;
+**When**
+
+Pre-reading period to review applications: [date month year] to [date month year]
+
+Applicants' response-to-feedback documents and presentations available by: [date month year]
+
+Interview panel date[s]: [date month year] to [date month year]
 
 We will send an agenda with the start and finish times for the interview panel in a later email.
 
-*Where*
-&lt;edit if required&gt;
+**Where**
+
+[edit if required]
 Polaris House
 North Star Avenue
 Swindon
 SN2 1UH
 
-There are directions on the Research Council UK website. When you arrive, ask for &lt;NAME&gt;.
+There are directions on the [Research Councils UK website](http://www.rcuk.ac.uk/contacts/howtoreachus/). When you arrive, ask for [NAME].
 
-*Fee*
-We pay &pound;500 a day for your attendance and &lt;£500 for pre-reading&gt;, plus travel and subsistence. Sign in to the Innovation Funding Service to see the travel and subsistence rates we offer. After the panel, please send your invoice and receipts for travel and subsistence to competitions.admin@innovateuk.gov.uk.
+**Fee**
 
-      </textarea>
+We pay &pound;500 a day for your attendance and [£500 for pre-reading], plus travel and subsistence. Sign in to the Innovation Funding Service to see the travel and subsistence rates we offer. After the panel, please send your invoice and receipts for travel and subsistence to competitions.admin@innovateuk.gov.uk.
+
+            </textarea>
+        </div>
 	</div>
 
   <p class="form-hint">
@@ -70,7 +77,6 @@ We pay &pound;500 a day for your attendance and &lt;£500 for pre-reading&gt;, p
   </p>
 
   <p class="form-hint extra-margin">
-      Competitions Team <br>
       Innovate UK <br>
       Tel: 0300 321 4357 <br>
       Email: competitions@innovateuk.gov.uk
