--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/types.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/types.html
@@ -55,10 +55,10 @@
 
         <label class="form-label form-label-bold"
                th:for="formInput[__${formInput.id}__]"
-               th:id="'form-label-'+${formInput.id}"
-               th:unless="${question.name == 'Project summary'} or ${question.name == 'Public description'}">
+               th:id="'form-label-'+${formInput.id}">
             <th:block th:if="${model.closed}">
-                <span class="heading-small" th:if="${question.name}" th:text="${question.name}" />
+                <span class="heading-small" th:if="${question.name} and ${question.name != 'Project summary'} and ${question.name != 'Public description'}"
+                      th:text="${question.name}" />
             </th:block>
             <th:block th:unless="${model.closed}">
               <span class="heading-small" th:if="${question.name}" th:text="${question.questionNumber!=null ? question.questionNumber + '. ' : '' } + ${question.name}" />
