--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/financecheck/summary.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/financecheck/summary.html
@@ -84,7 +84,7 @@
             </td>
             <td class="aligncentre">
                 <a th:href="@{/project/{projectId}/finance-check/organisation/{organisationId}/query(projectId=${model.financeCheckSummaryResource.projectId},organisationId=${orgDetails.id})}"
-                   th:text="${orgDetails.isAwaitingResponse() ? 'Awaiting response' : 'View'}"/>
+                   th:text="View"/>
             </td>
             <td class="aligncentre">
                 <a th:href="@{/project/{projectId}/finance-check/organisation/{organisationId}/note(projectId=${model.financeCheckSummaryResource.projectId},organisationId=${orgDetails.id})}">View</a>
