IFS-2692 Update email address as a link

--- a/ifs-web-service/ifs-front-door-service/src/main/resources/templates/competition/info/the-princes-trust-terms-and-conditions.html
+++ b/ifs-web-service/ifs-front-door-service/src/main/resources/templates/competition/info/the-princes-trust-terms-and-conditions.html
@@ -96,7 +96,7 @@
     <h2 class="heading-medium">11. UK statutory framework</h2>
     <p>Innovate UK is subject to the requirements of the Freedom of Information Act 2000 and Data Protection Act 1998, as detailed on our corporate website.</p>
     <h2 class="heading-medium">12. Publication of information</h2>
-    <p>Innovate UK encourages you to seek your own publicity. You can mention the support you have been given by using the words ‘supported by Innovate UK’. However it is important that you do not use Innovate UK’s logo in any of your literature without getting permission in writing from your Innovation Champion first. Please consult the Innovate UK guide ‘Publicising your project: guidelines from Innovate UK.’ This is available on request from Innovate UK’s Press Office (pressoffice@innovateuk.gov.uk).</p>
+    <p>Innovate UK encourages you to seek your own publicity. You can mention the support you have been given by using the words ‘supported by Innovate UK’. However it is important that you do not use Innovate UK’s logo in any of your literature without getting permission in writing from your Innovation Champion first. Please consult the Innovate UK guide ‘Publicising your project: guidelines from Innovate UK.’ This is available on request from Innovate UK’s Press Office (<a href="mailto:pressoffice@innovateuk.gov.uk">pressoffice@innovateuk.gov.uk</a>).</p>
     <h2 class="heading-medium">13. Issue resolution</h2>
     <p>Although your Innovation Champion will be your first point of contact, you can contact Emily Nott: <a href="mailto:Emily.Nott@innovateuk.gov.uk">Emily.Nott@innovateuk.gov.uk</a> if you need to discuss a matter directly.</p>
     <h2 class="heading-medium">14. Force majeure</h2>
